Fix #4231: align date picker icon with fields

--- a/form-runner/jvm/src/main/assets/xbl/orbeon/fields-date/fields-date.less
+++ b/form-runner/jvm/src/main/assets/xbl/orbeon/fields-date/fields-date.less
@@ -17,6 +17,7 @@
         .xbl-fr-date {
             input { display: none ; }
             display: inline-block;
+            vertical-align: middle;
         }
     }
 
